--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -2,7 +2,7 @@
 
 .swagger-ui-wrap {
 
-    line-height: 1;
+    line-height: 30px;
     font-family: "Droid Sans", sans-serif;
     max-width: 960px;
     margin-left: auto;
