added styles and the swagger specification for conversations

--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -7,7 +7,6 @@
 .access {
     float: right;
 }
-
 .auth {
     float: right;
 }
@@ -100,6 +99,7 @@
             width: 30px;
         }
         .conv{
+            padding-left: 10px;
 
         }
         // &:before{
