--- a/src/main/less/specs.less
+++ b/src/main/less/specs.less
@@ -617,7 +617,7 @@
                                     width: auto;
                                     margin: 0;
                                     padding: 0;
-                                    line-height: 1.1em;
+                                    line-height: 1.2em;
                                     color: black;
                                     span.path {
                                         padding-left: 10px;
@@ -658,12 +658,12 @@
                                     display: block;
                                     clear: none;
                                     float: right;
-                                    margin: 6px 10px 0 0;
+                                    margin: 0 10px 0 0;
                                     li {
                                         float: left;
                                         clear: none;
                                         margin: 0;
-                                        padding: 2px 10px;
+                                        padding: 0px 10px;
                                         font-size: 0.9em;
                                         a {
                                             text-decoration: none;
