--- a/src/main/template/operation.handlebars
+++ b/src/main/template/operation.handlebars
@@ -58,6 +58,7 @@
             <th style="width: 200px; max-width: 200px">Description</th>
             <th style="width: 100px; max-width: 100px">Parameter Type</th>
             <th style="width: 220px; max-width: 230px">Data Type</th>
+            <th style="width: 120px; max-width: 230px">Default Value</th>
             </tr>
           </thead>
           <tbody class="operation-params">
