--- a/src/main/template/param_list.handlebars
+++ b/src/main/template/param_list.handlebars
@@ -25,4 +25,5 @@
 </td>
 <td class="markdown">{{{description}}}</td>
 <td>{{{paramType}}}</td>
+<td>{{{default}}}</td>
 <td><span class="model-signature"></span></td>
