--- a/src/main/less/bv.less
+++ b/src/main/less/bv.less
@@ -15,4 +15,46 @@
     }
 
 
-    
+.createJSONContainer{
+  width: 100%;
+  #your_input_apiKey{
+    float:left;
+  }
+  #create{
+    float:left;
+  }
+}
+
+/* apiKey*/
+.apiKey{
+    margin: 20px auto;
+    label{
+        float:left;
+    }
+    input{
+        float:left;
+        margin: 5px 0 0 20px;
+    }
+    .button{
+        float:left;
+        display: block;
+        clear: none;
+        float: left;
+        margin: 0 10px 0 20px;
+        a{
+              display: block;
+              text-decoration: none;
+              font-weight: bold;
+              padding: 0px 8px;
+              font-size: 0.9em;
+              color: white;
+              background-color: #00ab8e;
+              -moz-border-radius: 4px;
+              -webkit-border-radius: 4px;
+              -o-border-radius: 4px;
+              -ms-border-radius: 4px;
+              -khtml-border-radius: 4px;
+              border-radius: 4px;
+        }
+    }
+}
