--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -79,7 +79,7 @@
         border-bottom-right-radius: 0;
         -moz-border-radius: 0.5em 0.5em 0 0;
         background: #003d4c;
-        height: 30px;
+        height: 60px;
         overflow: hidden;
         position: relative;
 
@@ -121,7 +121,7 @@
             input#input_baseUrl {
                 width: 400px;
             }
-            a#explore {
+            a#explore, a#create {
                 display: block;
                 text-decoration: none;
                 font-weight: bold;
