modify the swagger spec.. and adding the spec parameter to get it instead of the URL in instantiation

--- a/src/main/html/css/screen.css
+++ b/src/main/html/css/screen.css
@@ -1293,7 +1293,7 @@
   width: 400px;
 }
 .swagger-section #header form#api_selector .input a#explore,
-.swagger-section #header form#api_selector .input a#create {
+.swagger-section #header form#api_selector .input a#API_key_submit {
   display: block;
   text-decoration: none;
   font-weight: bold;
