--- a/src/main/less/screen.less
+++ b/src/main/less/screen.less
@@ -121,7 +121,7 @@
             input#input_baseUrl {
                 width: 400px;
             }
-            a#explore, a#create {
+            a#explore, a#API_key_submit {
                 display: block;
                 text-decoration: none;
                 font-weight: bold;
